SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Transaction_Group__c/SaaSOptics_Transaction_Group__c.object-meta.xml
<CustomObject>
    <label>SaaSOptics Transaction Group</label>
    <nameField>
        <label>SaaSOptics Transaction Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SaaSOptics Transaction Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>