SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Transaction_Group__c/fields/SaaSOptics_Billing_Alt_Phone__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Billing_Alt_Phone__c</fullName>
    <label>Billing: Alt. Phone</label>
    <type>Phone</type>
</CustomField>