SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Transaction_Group__c/fields/SaaSOptics_Billing_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Billing_Company_Name__c</fullName>
    <label>Billing: Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>