SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Transaction_Group__c/fields/SaaSOptics_Billing_Fax__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Billing_Fax__c</fullName>
    <label>Billing: Fax</label>
    <type>Phone</type>
</CustomField>