SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Transaction_Group__c/fields/SaaSOptics_Billing_Resale_Number__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Billing_Resale_Number__c</fullName>
    <label>Billing: Resale Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>