SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Transaction_Group__c/fields/SaaSOptics_Billing_Sales_Rep_QB_Field__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Billing_Sales_Rep_QB_Field__c</fullName>
    <label>Billing: Sales Rep (QB Field)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>