SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Transaction_Group__c/fields/SaaSOptics_Billing_Salutation__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Billing_Salutation__c</fullName>
    <label>Billing: Salutation</label>
    <length>15</length>
    <type>Text</type>
</CustomField>