SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Transaction_Group__c/fields/SaaSOptics_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Billing_Street__c</fullName>
    <label>Billing: Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>