SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Transaction_Group__c/fields/SaaSOptics_Billing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Billing_Zip_Postal_Code__c</fullName>
    <label>Billing: Zip/Postal Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>