SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Transaction_Group__c/fields/SaaSOptics_Contract_URL__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Contract_URL__c</fullName>
    <label>SaaSOptics Contract URL</label>
    <type>Url</type>
</CustomField>