SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Transaction_Group__c/fields/SaaSOptics_Customer_SFDC_ID__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Customer_SFDC_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SaaSOptics Transaction Groups</relationshipLabel>
    <relationshipName>SaaSOptics_Transaction_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>