SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Transaction_Group__c/fields/SaaSOptics_Customer_URL__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Customer_URL__c</fullName>
    <label>SaaSOptics Customer URL</label>
    <type>Url</type>
</CustomField>