SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Transaction_Group__c/fields/SaaSOptics_Txs_SFDC_Opp_ID__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Txs_SFDC_Opp_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SaaSOptics Transaction Groups</relationshipLabel>
    <relationshipName>SaaSOptics_Transaction_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>