SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Transaction_Group__c/fields/SaaSOptics_Txs_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SaaSOptics_Txs_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>