SFDC_LD_Packages/objects-layouts/main/default/objects/SaaSOptics_Transaction_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SaaSOptics_Customer_SFDC_ID__c</columns>
    <columns>SaaSOptics_Contract_SFDC_ID__c</columns>
    <columns>SaaSOptics_Contract_Number__c</columns>
    <columns>SaaSOptics_Txs_SFDC_Opp_ID__c</columns>
    <columns>SaaSOptics_Txs_Order_Date__c</columns>
    <columns>SaaSOptics_Txs_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>